[package]
name = "Auto_Backup"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "*", features = ["default_fonts"] }
egui = "*"
rfd = "*"
chrono = "*"
fs_extra = "*"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]