[package]
name = "Auto_Backup"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts"] }
egui = "0.22.0"
rfd = "0.11.0"
chrono = "0.4.24"
fs_extra = "1.3.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]