[package]
name = "auto_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
chrono = "0.4.31"
fs_extra = "1.3.0"
rfd = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[package.metadata.windows]
subsystem = "windows"
minimum-system-version = "6.1"